--- a/Home.html
+++ b/Home.html
@@ -34,5 +34,5 @@
   <script type="module" src="duel-id.js"></script>
 </body>
 
-<script type="module" src="Home.js"></script>
+<script type="module" src="./Home.js"></script>
 </html>
