--- a/Pack-Opener.html
+++ b/Pack-Opener.html
@@ -60,7 +60,7 @@
 </section>
   </main>
 
-  <script type="module" src="Pack-Opener.js"></script>
+  <script type="module" src="./Pack-Opener.js"></script>
 
 </body>
 
