--- a/Star-Map.html
+++ b/Star-Map.html
@@ -27,7 +27,7 @@
     <h1>Star Map</h1>
   </main>
 
-  <script type="module" src="firebase.js"></script>
-  <script type="module" src="duel-id.js"></script>
+  <script type="module" src="./firebase.js"></script>
+  <script type="module" src="./duel-id.js"></script>
 </body>
 </html>
