--- a/Admin.html
+++ b/Admin.html
@@ -188,7 +188,7 @@
 
   </main>
 
-  <script type="module" src="firebase.js"></script>
-  <script type="module" src="Admin.js"></script>
+  <script type="module" src="./firebase.js"></script>
+  <script type="module" src="./Admin.js"></script>
 </body>
 </html>
