--- a/Card-Case.html
+++ b/Card-Case.html
@@ -139,7 +139,7 @@
   </div>
 </div>
 
-<script type="module" src="firebase.js"></script>
-<script type="module" src="Card-Case.js"></script>
+<script type="module" src="./firebase.js"></script>
+<script type="module" src="./Card-Case.js"></script>
 </body>
 </html>
