--- a/Duel-ID.html
+++ b/Duel-ID.html
@@ -199,6 +199,6 @@
 </div>
 
   <script type="module" src="./firebase.js"></script>
-  <script type="module" src="./duel-id.js"></script>
+  <script type="module" src="./Duel-ID.js"></script>
 </body>
 </html>
